3: Added basic navigation and buttons/links to do so. Can now visit every page on site.

--- a/CeGameApp-SPA/src/app/registrationpage/registrationpage.component.html
+++ b/CeGameApp-SPA/src/app/registrationpage/registrationpage.component.html
@@ -1,1 +1,4 @@
-<p>registrationpage works!</p>
+<h1>Registration Page</h1>
+<p>Registration Page Form</p>
+<button routerLink='/signinpage' class="btn btn-primary">Already Registered? Sign in!</button>
+
