--- a/CeGameApp-SPA/src/app/navbar/navbar.component.html
+++ b/CeGameApp-SPA/src/app/navbar/navbar.component.html
@@ -1,23 +1,27 @@
 <nav class="navbar navbar-expand  navbar-light bg-light">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a href="#" class="navbar-brand"> Home </a>
+            <a routerLink="" class="navbar-brand"> Home </a>
         </div>
 
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav mx-auto">
-                <li class="nav-item mr-2"><a href="#">Game Info</a></li>
-                <li class="nav-item mr-2"><a href="#">Company Info</a></li>
+                <li class="nav-item mr-2"><a routerLink="/gameinfo" routerLinkActive="active" >Game Info</a></li>
+                <li class="nav-item mr-2"><a routerLink="/companyinfo" routerLinkActive="active">Company Info</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" role="button">Sign-In/Register <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Sign-In</a></li>
-                        <li><a href="#">Register</a></li>
+                <li class="dropdown" appDropdown #r="appDropdown">
+                    <button type = button 
+                            class="btn btn-primary dropdown-toggle" 
+                            role="button">Sign-In/Register 
+                            <span class="caret"></span></button>
+                    <ul class="dropdown-menu" [ngClass]="{'show':r.isOpen}">
+                        <li><a routerLink="/signinpage">Sign-In</a></li>
+                        <li><a routerLink="/registrationpage">Register</a></li>
                     </ul>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
+
