--- a/CeGameApp-SPA/src/app/users/character/character-list/character-list.component.html
+++ b/CeGameApp-SPA/src/app/users/character/character-list/character-list.component.html
@@ -1,1 +1,4 @@
-<p>character-list works!</p>
+<h1>Your Character List!</h1>
+<p> list of characters</p>
+<button routerLink='/user/1/character-list/1' class="btn btn-primary">View Selected Character</button>
+<button routerLink='/user/1' class="btn btn-success">Go back to profile page</button>
