--- a/CeGameApp-SPA/src/app/users/character/character.component.html
+++ b/CeGameApp-SPA/src/app/users/character/character.component.html
@@ -1,1 +1,3 @@
-<p>character works!</p>
+<h1>Character!</h1>
+<p>Character Info</p>
+<button routerLink='/user/1/character-list' class="btn btn-primary">Go back to character list</button>
