--- a/CeGameApp-SPA/src/app/users/useredit/useredit.component.html
+++ b/CeGameApp-SPA/src/app/users/useredit/useredit.component.html
@@ -1,1 +1,4 @@
-<p>useredit works!</p>
+<h1>Edit UserName! Profile</h1>
+<p>Edit Form</p>
+<button routerLink='/user/1' class="btn btn-primary">Go Back to Profile Page</button>
+
