--- a/CeGameApp-SPA/src/app/registrationpage/registrationpage.component.html
+++ b/CeGameApp-SPA/src/app/registrationpage/registrationpage.component.html
@@ -1,4 +1,21 @@
-<h1>Registration Page</h1>
-<p>Registration Page Form</p>
-<button routerLink='/signinpage' class="btn btn-primary">Already Registered? Sign in!</button>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <h1>Register</h1>
+            <form #f="ngForm" (ngSubmit)="onSubmit()">
+                <p>
+                    <label>User Name: </label>
+                    <input type="text" required><!-- Add [(ngModel)]="user.userName" -->
+                </p>
+                <P>
+                    <label>Password: </label>
+                    <input type="text" required> <!-- Add [(ngModel)]="user.password" -->
+                </P>
+                <button type="submit" [disabled]="!f.valid" routerLink='/user/1'
+                    class="btn btn-primary">Register!</button>
+                <button routerLink='/signinpage' class="btn btn-success">Already have an account? Sign in!</button>
+            </form>
+        </div>
+    </div>
+</div>
 
