Modified html to make it nicer looking for sign in and register. Connected form to .ts file in sign in. Created service to connect to api.

--- a/CeGameApp-SPA/src/app/registrationpage/registrationpage.component.html
+++ b/CeGameApp-SPA/src/app/registrationpage/registrationpage.component.html
@@ -1,15 +1,15 @@
-<div class="container">
-    <div class="row">
+<div class="container h-100">
+    <div class="row h-100 justify-content-center align-items-center">
         <div class="col-xs-12">
             <h1>Register</h1>
             <form #f="ngForm" (ngSubmit)="onSubmit()">
                 <p>
-                    <label>User Name: </label>
-                    <input type="text" required><!-- Add [(ngModel)]="user.userName" -->
+                    <label>Create a User Name: </label>
+                    <input class="form-control mr-sm-2" type="text" required><!-- Add [(ngModel)]="user.userName" -->
                 </p>
                 <P>
-                    <label>Password: </label>
-                    <input type="text" required> <!-- Add [(ngModel)]="user.password" -->
+                    <label>Create a Password: </label>
+                    <input class="form-control mr-sm-2" type="text" required> <!-- Add [(ngModel)]="user.password" -->
                 </P>
                 <button type="submit" [disabled]="!f.valid" routerLink='/user/1'
                     class="btn btn-primary">Register!</button>
