--- a/CeGameApp-SPA/src/app/navbar/navbar.component.html
+++ b/CeGameApp-SPA/src/app/navbar/navbar.component.html
@@ -1,27 +1,21 @@
-<nav class="navbar navbar-expand  navbar-light bg-light">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a routerLink="" class="navbar-brand"> Home </a>
-        </div>
-
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav mx-auto">
-                <li class="nav-item mr-2"><a routerLink="/gameinfo" routerLinkActive="active" >Game Info</a></li>
-                <li class="nav-item mr-2"><a routerLink="/companyinfo" routerLinkActive="active">Company Info</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown" appDropdown #r="appDropdown">
-                    <button type = button 
-                            class="btn btn-primary dropdown-toggle" 
-                            role="button">Sign-In/Register 
-                            <span class="caret"></span></button>
-                    <ul class="dropdown-menu" [ngClass]="{'show':r.isOpen}">
-                        <li><a routerLink="/signinpage">Sign-In</a></li>
-                        <li><a routerLink="/registrationpage">Register</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </div>
+<nav class="navbar navbar-expand-md  navbar-light bg-light">
+    <a routerLink="" class="navbar-brand"> Welcome </a>
+         <ul class="nav navbar-nav mr-auto">
+            <li class="nav-item"><a class="nav-link" routerLink="" routerLinkActive ="active" [routerLinkActiveOptions]="{exact: true}">Home</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="/gameinfo" routerLinkActive="active" >Game Info</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="/companyinfo" routerLinkActive="active">Company Info</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown" appDropdown #r="appDropdown">
+                <button type = button 
+                        class="btn btn-primary dropdown-toggle" 
+                        role="button">Sign-In/Register 
+                        <span class="caret"></span></button>
+                <ul class="dropdown-menu" [ngClass]="{'show':r.isOpen}">
+                    <li><a routerLink="/signinpage">Sign-In</a></li>
+                    <li><a routerLink="/registrationpage">Register</a></li>
+                </ul>
+            </li>
+        </ul>
 </nav>
 
