--- a/CeGameApp-SPA/src/app/sign-in-page/sign-in-page.component.html
+++ b/CeGameApp-SPA/src/app/sign-in-page/sign-in-page.component.html
@@ -1,18 +1,18 @@
-<div class="container">
-    <div class="row">
+<div class="container h-100">
+    <div class="row h-100 justify-content-center align-items-center">
         <div class="col-xs-12">
             <h1>Sign-In</h1>
-            <form #f="ngForm" (ngSubmit)="onSubmit()">
+            <form #loginForm="ngForm" (ngSubmit)="onSubmit()">
                 <p>
                     <label>User Name: </label>
-                    <input type="text" required><!-- Add [(ngModel)]="user.userName" -->
+                    <input class="form-control mr-sm-2" type="text" name="userName" required [(ngModel)]="signInInfo.userName">
                 </p>
                 <P>
                     <label>Password: </label>
-                    <input type="text" required> <!-- Add [(ngModel)]="user.password" -->
+                    <input class="form-control mr-sm-2" type="password" name="Password" required [(ngModel)]="signInInfo.Password"> 
                 </P>
-                <button type="submit" [disabled]="!f.valid" routerLink='/user/1' class="btn btn-primary">Sign-In!</button>
-                <button routerLink='/registrationpage' class="btn btn-success">Don't have an account? Register!</button>
+                <button type="submit" class="btn btn-primary my-2 my-sm-0" (click)="onSubmit()" [disabled]="!loginForm.valid" routerLink='/user/1'>Sign-In!</button>
+                <button type="button" class="btn btn-success my-2 my-sm-0"  routerLink='/registrationpage' >Don't have an account? Register!</button>
             </form>
         </div>
     </div>
